force-app/main/default/objects/Charity_Commission_Mapping__mdt/Charity_Commission_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>US TP</description>
    <label>Charity Commission Mapping</label>
    <pluralLabel>Charity Commission Mappings</pluralLabel>
</CustomObject>