force-app/main/default/objects/Charity_Commission_Mapping__mdt/fields/Account_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Field_Name__c</fullName>
    <label>Account Field Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>