force-app/main/default/objects/Charity_Commission_Mapping__mdt/fields/Charity_Commission_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Charity_Commission_Field_Name__c</fullName>
    <label>Charity Commission Field Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>