force-app/main/default/objects/Charity_Commission_Mapping__mdt/fields/Row_Title__c.field-meta.xml
<CustomField>
    <fullName>Row_Title__c</fullName>
    <label>Row Title</label>
    <length>125</length>
    <type>Text</type>
</CustomField>