force-app/main/default/objects/Charity_Commission_Mapping__mdt/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Order__c</columns>
    <columns>Charity_Commission_Field_Name__c</columns>
    <columns>Account_Field_Name__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
</ListView>